Views Finais mudar action dos Forms

--- a/templates/posLogin.html
+++ b/templates/posLogin.html
@@ -2,12 +2,12 @@
 <html>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">
- <head>
-    <title>Inscri&ccedil;&atilde; PPGI</title>
+<head>
+	<title>Bem Vindo</title>
 </head>
-<header></header>
-  <body>
-    <div id="Form">
+<body>
+<div id="Form">
+<h1>Selecione Quais Inscri&ccedil;&otilde;es Visualizar</h1>
       <form action="/form1" >
         <BUTTON class="inputBox" >Doutorado</BUTTON> 
       </form>
@@ -15,10 +15,12 @@
         <BUTTON class="inputBox"  > Mestrado</BUTTON> 
       </form>
       <form action="/form2">
-        <BUTTON class="inputBox" > Visualizar Inscri&ccedil;&otilde;es</BUTTON> 
+        <BUTTON class="inputBox" > Voltar</BUTTON> 
       </form>
-        
+     
 
-    </div>
-  </body>
+</div>
+
+
+</body>
 </html>
