--- a/templates/formDoutorado.html
+++ b/templates/formDoutorado.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">
   <head>
     <title>Inscri&ccedil;&atilde;o Doutorado</title>
   </head>
