--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
-
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="mystyle.css">  <head>
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">  
+<head>
     <title>Inscri&ccedil;&atilde; PPGI</title>
   </head>
   <body >
