Mudanças nos Forms

--- a/templates/Initial.html
+++ b/templates/Initial.html
@@ -3,18 +3,19 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">
  <head>
-    <title>Inscri&ccedil;&atilde; PPGI</title>
+    <title>Inscri&ccedil;&atilde;o PPGI</title>
 </head>
 <header></header>
   <body>
     <div id="Form">
-      <form action="/form1" >
+      <h1>Inscri&ccedil;&atilde;o PPGI</h1>
+      <form action="/formDoutorado" >
         <BUTTON class="inputBox" >Doutorado</BUTTON> 
       </form>
-      <form action="/form2">
+      <form action="/formMestrado">
         <BUTTON class="inputBox"  > Mestrado</BUTTON> 
       </form>
-      <form action="/form2">
+      <form action="/login">
         <BUTTON class="inputBox" > Visualizar Inscri&ccedil;&otilde;es</BUTTON> 
       </form>
         
