--- a/templates/formDoutorado.html
+++ b/templates/formDoutorado.html
@@ -6,7 +6,7 @@
     <title>Inscri&ccedil;&atilde;o Doutorado</title>
   </head>
   <body>
-<form id="Form" action="">
+<form id="Form" action="/cadatroConcluido" method="POST">
 
 <h1>Formul&aacute;rio de inscri&ccedil;&atilde;o:</h1>
 
@@ -137,7 +137,7 @@
 </div>
 <div style="overflow:auto;">
   <div style="float:right;">
-    <button type="submit" id="SubmitBtn" formaction="" >Enviar</button>
+    <button type="submit" id="SubmitBtn">Enviar</button>
   </div>
 </div>
 </form>
