--- a/templates/login.html
+++ b/templates/login.html
@@ -3,16 +3,16 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">  
 <head>
-    <title>Inscri&ccedil;&atilde; PPGI</title>
+    <title>{{erro}} Inscri&ccedil;&atilde; PPGI</title>
   </head>
   <body >
-  	<div id="form" >
+  	<div id="Form" >
 	 	<h1>Admin Login</h1>
 		<form action="/verificado" method="POST">
 			<p>Nome:  <input class="inputBox" name="user"></p> 
 			<p>Senha: <input class="inputBox" name="senha"></p>
 	  		<div style="float:right;">
-	    		<button type="submit" id="SubmitBtn" formaction="" >Enviar</button>
+	    		<button type="submit" id="SubmitBtn" >Enviar</button>
 	  		</div>
     </form>
 	</div>
