--- a/templates/posLogin.html
+++ b/templates/posLogin.html
@@ -8,10 +8,10 @@
 <body>
 <div id="Form">
 <h1>Selecione Quais Inscri&ccedil;&otilde;es Visualizar</h1>
-      <form action="/form1" >
+      <form action="/insDoutorado" >
         <BUTTON class="inputBox" >Doutorado</BUTTON> 
       </form>
-      <form action="/form2">
+      <form action="/insMest">
         <BUTTON class="inputBox"  > Mestrado</BUTTON> 
       </form>
       <form action="/form2">
