--- a/templates/formMestrado.html
+++ b/templates/formMestrado.html
@@ -6,7 +6,7 @@
     <title>Inscri&ccedil;&atilde;o Mestrado</title>
   </head>
   <body>
-<form id="Form" action="" method="POST" >
+<form id="Form" action="/cadatroConcluido" method="POST" >
 <h1>Formul&aacute;rio de inscri&ccedil;&atilde;o:</h1>
 <div>
 <h2>Linha de Pesquisa:</h2>
@@ -136,7 +136,7 @@
 </div>
 <div style="overflow:auto;">
   <div style="float:right;">
-    <button type="submit" id="SubmitBtn" formaction="" >Enviar</button>
+    <button type="submit" id="SubmitBtn">Enviar</button>
   </div>
 </div>
 </form>
