--- a/templates/formDoutorado.html
+++ b/templates/formDoutorado.html
@@ -14,6 +14,8 @@
 <div>
 <h2>Linha de Pesquisa:</h2>
   <select name="Linha De Pesquisa">
+      <p><input style="display:none;" name="Tipo" value="Doutorado" ></p>
+
       <option value="">Selecione</option>
       <option value="Sistemas Complexos Adaptativos">Sistemas Complexos Adaptativos (Redes de Computador)</option>
       <option value="Gestao De Sistemas Complexos">Gest&atilde;o de Sistemas Complexos (Sistemas de Informa&ccedil;&atilde;o)</option>
@@ -45,8 +47,8 @@
     <option value="Estrangeiro">Estrangeiro</option>
   </select>
 </p>
-  <p> <input class="inputBox" placeholder="Pa&iacute;s" ></p> 
-  <p><input class="inputBox" placeholder="Ano de Chegada"type="" > </p>
+  <p> <input name="Pais" class="inputBox" placeholder="Pa&iacute;s" ></p> 
+  <p><input name="AnoChegada" class="inputBox" placeholder="Ano de Chegada"type="" > </p>
 
   <h2>Endere&ccedil;o:</h2>
     <p><input name="Logradouro" class="inputBox" placeholder="Logradouro"type="" ></p>
@@ -92,7 +94,7 @@
     <p>Data de Emiss&atilde;o: <input name="birthDay"class="inputBox" type="date" ></p>
     <p><input name="OrgaoEmissorID" class="inputBox" placeholder="Org&atilde;o Emissor"  type="" ></p> 
     <p><input name="EstadoEmissorID" class="inputBox" placeholder="Estado Emissor"  type="" ></p> 
-
+<!--
   <p>T&iacute;tulo  Eleitoral:</p>
     <p><input name="NumeroTitulo" class="inputBox" placeholder="N&uacute;mero"  type="" ></p> 
     <p><input name="EstadoTitulo" class="inputBox" placeholder="Estado"  type="" ></p> 
@@ -130,7 +132,7 @@
     <p><input name="Curso" class="inputBox" placeholder="Curso"  type="" ></p>
     <p><input name="EstadoFormacao" class="inputBox" placeholder="Estado"  type="" ></p> 
     <p><input name="ConclusaoFormacao" class="inputBox" placeholder="Ano de Conclus&atilde;o"  type="" ></p>
-
+-->
   <h1>Carta de Interesse</h1>
     <textarea name="Carta de Interesse" placeholder="Fa&ccedil;a uma reda&ccedil;&atilde;o expressando suas motiva&ccedil;&otilde;es e expectativas, tanto profissionais como acad&ecirc;micas, em rela&ccedil;&atilde;o ao curso" rows="30" cols="100"></textarea>
     
