--- a/templates/visualizarPessoa.html
+++ b/templates/visualizarPessoa.html
@@ -19,7 +19,7 @@
   <p>Nome da M&atilde;e: {{data['NomeMae']}}</p>
   <p>CPF:  {{data["CPF"]}} </p>
   <p>
-  Data de Nascimento: {{data["BirthDay"]}}
+  Data de Nascimento: {{data["birthDay"]}}
   </p>
   <p>Sexo: {{data["Sexo"]}}</p>
 
@@ -61,7 +61,7 @@
     <p>Data de Emiss&atilde;o:  {{data["DataEmissaoID"]}} </p>
     <p>Org&atilde;o: {{data["OrgaoEmissorID"]}}    </p>
     <p>Estado: {{data["EstadoEmissorID"]}}  </p>
-
+<!--
   <p>T&iacute;tulo  Eleitoral:</p>
     <p>N&uacute;mero: {{data["NumeroTitulo"]}}</p>
     <p>Estado: {{data["EstadoTitulo"]}} </p>
@@ -81,10 +81,10 @@
     <p>Curso: {{data["Curso"]}} </p>
     <p>Estado: {{data["EstadoFormacao"]}}  </p>
     <p>Ano de Conclus&atilde;o: {{data["ConclusaoFormacao"]}}    </p>
+-->
 
   <h1>Carta de Interesse</h1>
     <div>{{data["Carta de Interesse"]}} </div>
-
 </div>
 
 <!-- Circles which indicates the steps of the form: -->
