--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -9,9 +8,9 @@
   <body >
   	<div id="Form" >
 	 	<h1>Admin Login</h1>
-		<form action="/verificado" method="POST">
+		<form action="/login" method="POST">
 			<p>Nome:  <input class="inputBox" name="user"></p> 
-			<p>Senha: <input class="inputBox" name="senha"></p>
+			<p>Senha: <input class="inputBox" type="password" name="senha"></p>
 	  		<div style="float:right;">
 	    		<button type="submit" id="SubmitBtn" >Enviar</button>
 	  		</div>
