--- a/templates/posLogin.html
+++ b/templates/posLogin.html
@@ -11,11 +11,12 @@
       <form action="/insDoutorado" >
         <BUTTON class="inputBox" >Doutorado</BUTTON> 
       </form>
-      <form action="/insMest">
+      <form action="/insMestrado">
+        
         <BUTTON class="inputBox"  > Mestrado</BUTTON> 
       </form>
-      <form action="/form2">
-        <BUTTON class="inputBox" > Voltar</BUTTON> 
+      <form action="" >
+        <BUTTON class="inputBox" onClick="history.go(-1)"> Voltar</BUTTON> 
       </form>
      
 
