Commit atrasado gambiarra com pickle

--- a/templates/listarNomes.html
+++ b/templates/listarNomes.html
@@ -4,17 +4,18 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mystyle.css') }}">
 <head>
 <!-- Mestrado ou Doutorado -->	
-	<title>Alunos Inscritos em {{data["tipo"]}}</title>
+	<title>Alunos Inscritos em {{data["Tipo"]}}</title>
 </head>
 <body>
+	
 	<div id="Form"  >
 	<!-- data["pessoas"]: lista contendo dicionario com as informacoes do inscrito -->
-	<h1>Alunos Inscritos em {{data["tipo"]}}</h1>
+	<h1>Alunos Inscritos em {{data["Tipo"]}}</h1>
 		<table style="width: 70%;" >	
 			<tr><td> Nome</td> <td> CPF</td>
 			{%for pessoa in data["pessoas"]%}
 				<tr>
-					<form action="/nana" method="POST">
+					<form action="/visualizarPessoa" method="POST">
 						<input style="display:none" type="text" name="CPF" value={{pessoa["CPF"]}} readonly>
         				<td><button class="linkButton" type="submit"  >{{pessoa["Nome"]}}</button> </td>
         				<td><button class="linkButton" type="submit"  >{{pessoa["CPF"]}}</button> </td>
@@ -23,11 +24,11 @@
 			{%endfor%}
 
 		</table>
-	
-	<!-- action substituir pela rota correta -->	
-      <form action="/">
+		      <form action="/">
         <BUTTON class="regularButton"  > Voltar</BUTTON> 
       </form>
+
+		<!-- action substituir pela rota correta -->	
 	</div>
 </body>
 </html>
