--- a/templates/visualizarPessoa.html
+++ b/templates/visualizarPessoa.html
@@ -85,6 +85,12 @@
 
   <h1>Carta de Interesse</h1>
     <div>{{data["Carta de Interesse"]}} </div>
+    <form action="/" >
+        <BUTTON class="inputBox" > Voltar</BUTTON> 
+      </form>
+     
+</div>
+  <div>
 </div>
 
 <!-- Circles which indicates the steps of the form: -->
